--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
-# Binaries for programs and plugins
+# Binaries for programs and pluginsa
+0.bin
+1.bin
 conductor
 *.exe
 *.exe~
